# Glitter

./: CMakeLists.txt
Glitter/Headers/: glitter.hpp
Glitter/Headers/Utils/: shader.hpp
Glitter/Shaders/: VertexShader.vert
Glitter/Shaders/LearnOpenGL/1-HelloTriangles/: FragmentShader.frag  FragmentShader2.frag
Glitter/Shaders/LearnOpenGL/2-Shaders/: FragmentShader.frag  VertexShader.vert
Glitter/Shaders/LearnOpenGL/3-Textures/: FragmentShader.frag  VertexShader.vert
Glitter/Sources/LearnOpenGL/1-HelloTriangles/1-HelloTrianglesMain/: HelloTriangles.cpp
Glitter/Sources/LearnOpenGL/1-HelloTriangles/1-HelloTrianglesPractice/: HelloTrianglesPractice.cpp
Glitter/Sources/LearnOpenGL/2-Shaders/: main.cpp
Glitter/Sources/LearnOpenGL/3-Textures/: main.cpp
Glitter/Sources/Utils/: shader.cpp
